--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 	height: 100vh;
 	width: 100vw;
 	display: grid;
-	filter: blur(1.5px);
+	filter: blur(3px);
 }
 
 body {
@@ -16,6 +16,7 @@ body {
 	background-size: 100vw;
 	overflow-x: hidden;
 	background-repeat: repeat-y;
+	font-size: 2em;
 }
 
 .word {
