Change background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,7 @@
 }
 
 body {
-	background-color: #dddddd;
-	background-image: url("../images/paper.png");
+	background-color: #f0ebdd;
 	background-size: 100vw;
 	overflow-x: hidden;
 	background-repeat: repeat-y;
