Remove blank page background, set to hex

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,7 @@
 }
 
 body {
-	background-color: #f0ebdd;
-	background-image: url("../images/blank_page.jpg");
+	background-color: #D6D2C9;
 	background-size: 100vw;
 	overflow-x: hidden;
 	background-repeat: repeat-y;
